# funasr-onnx-automodel

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usage.py
funasr_onnx_automodel/: __init__.py  auto_model.py
